--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,37 @@
-*.o
-writer
-Test_*_Runner.c
-build/
-crosstool-ng
-aesd-build
+# Node binaries
+actions-runner/externals/node*/bin/node
+
+# GitHub Actions Runner Archive
+actions-runner/*.tar.gz
+
+# Dependency directories
+node_modules/
+vendor/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE and editor folders
 .vscode/
-test.sh.log
+.idea/
+*.swp
+*.swo
+*.sublime-workspace
+
+# Build outputs
+dist/
+tmp/
+out/
+build/
+*.log
+
+# Environment files
+.env
+.env.local
+
